@@ -74,13 +74,13 @@ class EDIPTFT {
     void setTextColor(char fg, char bg);
     void setTextFont(char font);
     void setTextAngle(char angle);
-    void drawText(int x1, int y1, char justification,String text);
+    void drawText(int x1, int y1, char justification,char* text);
     void setLineColor(char fg, char bg);
     void setLineThick(char x, char y);
     void drawLine(int x1, int y1, int x2, int y2);
     void drawRect(int x1, int y1, int x2, int y2);
     void drawRectf(int x1, int y1, int x2, int y2, char color);
-    void defineTouchKey(int x1, int y1, int x2, int y2, char down, char up, String text);
+    void defineTouchKey(int x1, int y1, int x2, int y2, char down, char up, char* text);
     void setTouchkeyColors(char n1, char n2, char n3, char s1, char s2, char s3);
     void setTouchkeyFont(char font);
     void setTouchkeyLabelColors(char nf,char sf);
